stopped on 'flex' exercise 3. Alignment chapter

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -5,11 +5,17 @@ body {
 img {
   width: 100px;
   height: 100px;
+  display: flex;
+  justify-content: space-around;
 }
+
+
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
 }
 
 /* do not edit this footer */
